# codingForUs

./: readme.md
PR提交教程/: readme.md
guide/CMakeGuide/: CMake.md
guide/CMakeGuide/template/: CMakeLists.txt
guide/CMakeGuide/template/include/: head.h
guide/CMakeGuide/template/src/: head.cpp
guide/CMake使用教程/: CMake.md
guide/Deepseek本地部署及连接知识库/: readme.md
guide/Github学生认证教程/: Github学生认证教程.md
guide/OJ刷题平台使用方法/: readme.md
guide/java培训/: ArrayIntroduction5.md  BaseEnvironmentConfiguration1.md  BasicGrammarLearning2.md  ControlStructure4.md  ObjectOriented6.md  Operator3.md  ~$rayIntroduction5.md
guide/pandas培训内容/code/: test.ipynb
guide/pandas培训内容/docx/: 01环境配置.md
guide/python基础语法/: 10.3培训.md
guide/python环境配置/docx/: 01环境配置.md
guide/rtt 线程PV使用示例/: 分苹果.md  读写者问题.md
guide/rtthread培训/: rtthreadGuide.md  环境配置.md
guide/rtthread培训/01环境配置/: HPUStudioBoardRtt.md
guide/rtthread培训/02操作系统概述/: 1.1操作系统的概念、功能和目标.md  1.2操作系统的特征（并发、共享、虚拟、异步）.md  1.3大内核与小内核.md  1.4中断的概念.md
guide/rtthread培训/03进程管理理论知识/: 2.1 进程的同步与互斥，通信，三种状态的转换.md  2.2实现临界区进程互斥的软件实现方法.md  2.3 实现临界区进程互斥的硬件实现方法.md  2.4 操作系统之信号量机制（整型信号量、记录型信号量P、V）.md  2.5 操作系统之信号量机制实现进程的互斥、同步与前驱关系.md  2.6 操作系统之进程同步与互斥经典问题（生产者-消费者问题、多生产者-多消费者问题、吸烟者问题、读者-写者问题、哲学家进餐问题）.md  2.7操作系统之死锁详解(预防、避免、检测、解除).md
project/AIGC/: README.md
project/机器学习/: SeoulBikeData.csv  UMLT_A1-2(3).ipynb  UMLT_A1-2.ipynb  week.xlsx
project/机器学习/.ipynb_checkpoints/: UMLT_A1-2-checkpoint.ipynb
project/目标检测/: LoadConfig.py  camera.py  detector.py  readme.md
project/管理系统模版/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  源.c
(+80 files in other folders)
